refactor: add diapay provider adapter architecture
